<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_image_on_view_pager"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/size_image_on_view_pager"
            android:layout_height="@dimen/size_image_on_view_pager"
            app:srcCompat="@drawable/yandex_icon"
            android:id="@+id/image_launcher"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:gravity="center">

        <TextView style="?android:textAppearanceMedium"
            android:id="@+id/text_view_yandex_launcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yandex_launcher"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:text="@string/launcher_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_info_app"
            android:textSize="18sp"
            android:gravity="center" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_released"
            android:gravity="center"
            android:text="@string/released_by"
            android:textSize="18sp" />
    </TableRow>

</LinearLayout>