<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/content"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center">








<TableRow
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.1" />

<TableRow
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.5"
    android:gravity="center">

    <TextView style="?android:textAppearanceMedium"
        android:id="@+id/text_view_select_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_theme"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp" />

</TableRow>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_image_on_view_pager">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/size_image_on_view_pager"
            android:layout_height="@dimen/size_image_on_view_pager"
            app:srcCompat="@drawable/dark_theme"
            android:id="@+id/image_chooser_dark_theme"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/background_border"/>

        <CheckBox
            android:id="@+id/check_box_dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/image_chooser_dark_theme"
            android:layout_alignRight="@+id/image_chooser_dark_theme"
            android:scaleX="1.20"
            android:scaleY="1.20"
            android:buttonTint="@color/colorAccent"
            android:checked="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/size_image_on_view_pager"
            android:layout_height="@dimen/size_image_on_view_pager"
            app:srcCompat="@drawable/light_theme"
            android:id="@+id/image_chooser_light_theme"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/background_border"/>

        <CheckBox
            android:id="@+id/check_box_light_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/image_chooser_light_theme"
            android:layout_alignRight="@+id/image_chooser_light_theme"
            android:scaleX="1.20"
            android:scaleY="1.20"
            android:buttonTint="@color/colorAccent"
            android:visibility="gone"/>

    </RelativeLayout>
</LinearLayout>

<TableRow
    android:layout_width="match_parent"
    android:layout_weight="0.55"
    android:gravity="center"
    android:layout_height="0dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:paddingTop="20dp"
        >

        <TextView
            android:text="@string/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            />

        <TextView
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"/>
    </LinearLayout>

</TableRow>

</LinearLayout>